# siwe-recap

./: Cargo.toml  README.md
.github/workflows/: rust.yml
src/: ability.rs  action.rs  builder.rs  capability.rs  eq_set.rs  error.rs  lib.rs  namespace.rs  serde_uri_string.rs  set.rs  translation.rs
tests/: serialized_cap.json  siwe_with_caps.txt  siwe_with_interleaved_resources.txt  siwe_with_no_caps.txt  siwe_with_statement.txt  siwe_with_statement_no_caps.txt
