[package]
name = "siwe-recap"
description = "EIP-5573: Mechanism on top of Sign-In with Ethereum for informed consent to delegate capabilities with an extensible scope mechanism."
license = "Apache-2.0"
version = "0.1.0"
edition = "2021"
readme = "README.md"
repository = "https://github.com/spruceid/siwe-recap/"

[dependencies]
base64 = "0.12"
iri-string = "0.6"
siwe = "0.5"
serde = { version = "1", features = ["derive"] }
serde_with = { version = "2" }
serde_ipld_dagcbor = { version = "0.2" }
libipld-core = { version = "0.16", features = ["serde-codec"] }
thiserror = "1"
