[package]
name = "siwe-recap"
description = "EIP-5573: Mechanism on top of Sign-In with Ethereum for informed consent to delegate capabilities with an extensible scope mechanism."
license = "Apache-2.0"
version = "0.1.0"
edition = "2021"
readme = "README.md"
repository = "https://github.com/spruceid/siwe-recap/"

[dependencies]
base64 = "0.12"
iri-string = { version = "0.6", features = ["serde"] }
siwe = "0.5"
serde_json = { version = "1" }
serde = { version = "1", features = ["derive"] }
serde_with = { version = "2" }
thiserror = "1"
cid = "0.10"
ucan-capabilities-object = { path = "../ucan-capabilities" }
serde_jcs = "0.1"
